changed wordOrder views on admin and other tingz

--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -61,8 +61,8 @@
           <!-- small box -->
           <div class="small-box bg-aqua">
             <div class="inner">
-              <h3>{{totalUsers}}</h3>
-              <p>Total Accounts</p>
+              <h3>Total</h3>
+              <p>Accounts</p>
             </div>
             <div class="icon">
               <i class="ion ion-person-add" style="zoom: 75%; padding-top: 25px;"></i>
