--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,12 +40,12 @@
       {{#if admin}}
       <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
       {{/if}}
-      {{#if developer}}
-      <li><a href="/dashboard"><i class="material-icons">work</i>My Bids</a></li>
+      {{!-- {{#if developer}}
+      <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
       {{/if}}
       {{#if customer}}
-      <li><a href="/dashboard"><i class="material-icons">work</i>My Bids</a></li>
-      {{/if}}
+      <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
+      {{/if}} --}}
 {{!--       <li><a href="#!"><i class="material-icons">mail_outline</i>Messages</a></li> --}}
 {{!--       <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li> --}}
 
