--- a/views/posts/review/create-review/index.handlebars
+++ b/views/posts/review/create-review/index.handlebars
@@ -24,7 +24,8 @@
           <form name="create-review" action="/review/{{poster}}/{{slug}}/createReviewWinner/{{winnersName}}" method="post">
 
             <div class="row control-group">
-              <div class="col s2 m2 offset-m2">
+              <div class="col s2 m2 offset-m5">
+                <br><br>
                 <label>Rating</label>
                 <input type="number" class="form-control" min="1" step="0.1" max="5" placeholder="5" name = "rating" required />
                 <p class="help-block text-danger"></p>
@@ -55,17 +56,17 @@
                 </label>
               </div>
             </div> --}}
-            <select id="example" name="rating">
+{{!--             <select id="example" name="rating">
               <option value="1">1<i class="fa fa-star" aria-hidden="true"></i></option>
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
               <option value="5">5</option>
-            </select>
+            </select> --}}
             <div class="row control-group">
               <div class="form-group col-xs-12 floating-label-form-group controls"><br>
                 <label>Feedback or Comments</label>
-                <br><p>If low rating, please provide reason for low evaluations.
+                <br><p>If low rating, please provide reason for low evaluations. If none, write none.
                 <input type="text" class="form-control" placeholder="Feedback or Comments" name = "comment" required />
                 <p class="help-block text-danger"></p>
               </div>
