--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -46,7 +46,7 @@
       {{#if customer}}
       <li><a href="/dashboard"><i class="material-icons">work</i>Overview</a></li>
       {{/if}} --}}
-{{!--       <li><a href="#!"><i class="material-icons">mail_outline</i>Messages</a></li> --}}
+      <li><a href="/messages"><i class="material-icons">mail_outline</i>Messages</a></li>
 {{!--       <li><a href="#!"><i class="material-icons">settings</i>Settings</a></li> --}}
 
       <li class="divider"></li>
