--- a/views/posts/review/index.handlebars
+++ b/views/posts/review/index.handlebars
@@ -38,13 +38,20 @@
 
     </div>
     </center>
+
   </div>
+
+           <div class="col s12 center-align">
+              <div class="create-post">
+                <a class="btn btn-default" href="/deposit/add">Deposit more money </a>
+              </div>
+            </div>
 </div>
 <script>
 function myButton(winningUser)
 {
   var x = document.URL;
-   window.location = x +'/'+ winningUser;
+   window.location = x +'/'+ winningUser+'/ok';
 }
 
 
