--- a/views/message/allConnections/index.handlebars
+++ b/views/message/allConnections/index.handlebars
@@ -11,53 +11,70 @@
   </div>
 </header>
 
-<div class="container">
-  <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="input-field">
-          <input id="myInputMessages" onkeyup="myFunctionMessages()" type="search" placeholder="Browse" value="{{search}}">
-          <label class="label-icon" for="search"><i class="material-icons">search</i></label>
-        </div>
-        
-        <div class="create-post">
-          <a href="/posts/new-post" class="btn-floating waves-effect red btn"><i class="material-icons">add</i></a>
-        </div>
 
-        <ul id="myULMessages" >
-          {{#each connectionsAdmin}}
+
+<div class="container">
+  <div class=" row">
+    <div class="col s12 ">
+      <div class="input-field">
+        <input id="myInputMessages" onkeyup="myFunctionMessages()" type="search" placeholder="Browse" value="{{search}}">
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+      </div> 
+
+{{!--       <div class="col s12 center-align ">
+        <a class='dropdown-button btn' href='#' data-activates='dropdown2'>New Message</a>
+      <!-- Dropdown Structure -->
+        <ul id='dropdown2' class='dropdown-content'>
+          <li><a href="#!">one</a></li>
+          <li><a href="#!">two</a></li>
+          <li class="divider"></li>
+          <li><a href="#!">three</a></li>
+          <li><a href="#!"><i class="material-icons">view_module</i>four</a></li>
+          <li><a href="#!"><i class="material-icons">cloud</i>five</a></li>
+        </ul>
+
+      </div>
+<br><br> --}}
+
+
+
+
+
+
+
+
+
+      <ul id="myULMessages" >
+        {{#each connectionsAdmin}}
           <div class="col s6">
             <li class="collection">
               <a class="collection-item" href="/messages/view/{{this.customerUsername}}{{this.developerUsername}}/">
                 <h4 class="left-align">{{this.customerUsername}}{{this.developerUsername}}</h4>
-              </a>
-              
+              </a>          
             </li>
-            </div>
-          {{/each}}
+          </div>
+        {{/each}}
 
-          {{#each connectionsDeveloper}}
-            <div class="col s6">
-              <li class="collection">
-                <a class="collection-item" href="/messages/view/{{this.customerUsername}}{{this.adminUsername}}/">
-                  <h4 class="left-align">{{this.customerUsername}}{{this.adminUsername}}</h4>
-                </a>
-              </li>
-            </div>
-          {{/each}}
+        {{#each connectionsDeveloper}}
+          <div class="col s6">
+            <li class="collection">
+              <a class="collection-item" href="/messages/view/{{this.customerUsername}}{{this.adminUsername}}/">
+                <h4 class="left-align">{{this.customerUsername}}{{this.adminUsername}}</h4>
+              </a>
+            </li>
+          </div>
+        {{/each}}
 
-
-          {{#each connectionsCustomer}}
-            <div class="col s6">
-              <li class="collection">
-                <a class="collection-item" href="/messages/view/{{this.adminUsername}}{{this.developerUsername}}/">
-                  <h4 class="left-align">{{this.adminUsername}}{{this.developerUsername}}</h4>
-                </a>
-              </li>
-            </div>
-          {{/each}}
-        </ul>
-
-      </div>
+        {{#each connectionsCustomer}}
+          <div class="col s6">
+            <li class="collection">
+              <a class="collection-item" href="/messages/view/{{this.adminUsername}}{{this.developerUsername}}/">
+                <h4 class="left-align">{{this.adminUsername}}{{this.developerUsername}}</h4>
+              </a>
+            </li>
+         </div>
+        {{/each}}
+      </ul>
     </div>
   </div>
 </div>
@@ -80,4 +97,7 @@
       }
   }
   myFunctionMessages();
+
+
+        
 </script>
