--- a/views/posts/review/winner/index.handlebars
+++ b/views/posts/review/winner/index.handlebars
@@ -9,8 +9,18 @@
         </div>
       </div>
     </div>
+          {{#if noCash}}
+            <div id="card-alert" class="card red lighten-5">
+              <div class="card-content red-text">
+                <i class="mdi-alert-error"></i>
+                <p><center>{{noCash}}</center></p>
+              </div>
+            </div>
+        </div>
+      {{/if}} 
   </div>
 </header>
+
 
 <div class="container">
   <div class="row">
@@ -53,10 +63,18 @@
           
           <br>
           <div class="row">
-            <div class="form-group col-xs-12">
+            <div class="form-group col s6">
                 <button type="submit" class="btn btn-default">Confirm</button>
             </div>
+            {{#if noCash}}
+            <div class="col s3 offset-s1">
+              <div class="create-post">
+                <a class="btn btn-default" href="/deposit/add">Deposit more money </a>
+              </div>
+            </div>
+            {{/if}}
           </div>
+
         </form>
       {{/if}}
     </div> 
