--- a/views/tools/workOrder/index.handlebars
+++ b/views/tools/workOrder/index.handlebars
@@ -69,7 +69,7 @@
                   <input type="hidden" name="cusId" value="{{customer.id}}">
                   <p class="help-block text-danger"></p>
                             <div class="form-group col-xs-6 center-align">
-            <button type="submit" class="btn brown lighten-1">Submit</button>
+            <button type="submit" {{disabled}} class="btn brown lighten-1">Submit</button>
           </div>
                 </form>
               {{/if}}
