changed all btn and fixed layout of btn on profile page

--- a/views/dashboard/index.handlebars
+++ b/views/dashboard/index.handlebars
@@ -114,8 +114,8 @@
                 <div class="quick-links center-align">
                   <h4>Quick Links</h4>
                   <div class="row">
-                    <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Add Money"><a class="waves-effect waves-light btn-large" href="/deposit/add">Add $</a></div>
-                    <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Account Balance"><a class="waves-effect waves-light btn-large" href="#">Balance</a></div>
+                    <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Add Money"><a class="waves-effect waves-light btn-large brown lighten-1" href="/deposit/add">Add $</a></div>
+                    <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Account Balance"><a class="waves-effect waves-light btn-large brown lighten-1" href="#">Balance</a></div>
                     {{!-- <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Name Guidelines"><a class="waves-effect waves-light btn-large" href="#">User Guidelines</a></div>
                     <div class="col l3 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="Issue Tracker"><a class="waves-effect waves-light btn-large" href="#">Issue Tracker</a></div>
                     <div class="col l4 offset-l4 s12 tooltipped" data-position="top" data-delay="50" data-tooltip="OTRS Support Site"><a class="waves-effect waves-light btn-large" href="#">Support Site</a></div> --}}
