--- a/views/deposit/initial/index.handlebars
+++ b/views/deposit/initial/index.handlebars
@@ -29,7 +29,7 @@
     </p>
     <p>
       <div class="form-group col-xs-12">
-              <button type="submit" class="btn">Finish Deposit</button>
+              <button type="submit" class="btn brown lighten-1">Finish Deposit</button>
           </div>
     </p>
   </form>
