--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -48,7 +48,7 @@
                   </p>
                 </div>
                 <div class="step-actions">
-                  <button class="waves-effect waves-dark btn next-step " >CONTINUE</button>
+                  <button class="waves-effect waves-dark btn next-step brown lighten-1" >CONTINUE</button>
                 </div>
               </div>
             </li>
@@ -62,7 +62,7 @@
                   </div>
                 </div>
                 <div class="step-actions">
-                  <button class="waves-effect waves-dark btn next-step">CONTINUE</button>
+                  <button class="waves-effect waves-dark btn next-step brown lighten-1">CONTINUE</button>
                   <button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
                 </div>
               </div>
