--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -30,7 +30,7 @@
 <br><br>
             
               <br>
-              <button type="submit" class="btn">Login</button>
+              <button type="submit" class="btn brown lighten-1">Login</button>
             </div>
             <br>
               <br>
