--- a/views/posts/review/index.handlebars
+++ b/views/posts/review/index.handlebars
@@ -28,7 +28,7 @@
         <a class="collection-item">
           <h4 class="col s8">{{this.user.username}}</h4>
           <h4 class="col s2">
-          <input type="button"style="height:50px;width:200px" name="theButton" class="btn btn-default" value="${{this.price}}" onclick="myButton('{{this.user.username}}');">
+          <input type="button"style="height:50px;width:200px" name="theButton" class="btn btn-default brown lighten-1" value="${{this.price}}" onclick="myButton('{{this.user.username}}');">
           </h4>
         </a>
       </li>
