--- a/views/set-up/index.handlebars
+++ b/views/set-up/index.handlebars
@@ -107,7 +107,7 @@
 
           <div class="col s2 offset-m5">
 
-              <button type="submit" class="btn btn-default">Done</button>
+              <button type="submit" class="btn btn-default brown lighten-1">Done</button>
           </div>
         </div>
       </form>
