--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -105,7 +105,7 @@ function checkUsername(){
                   </div>
                </div>
                <div class="step-actions">
-                  <button class="waves-effect waves-dark btn next-step " >CONTINUE</button>
+                  <button class="waves-effect waves-dark btn next-step brown lighten-1" >CONTINUE</button>
                </div>
             </div>
          </li>
@@ -119,7 +119,7 @@ function checkUsername(){
                   </div>
                </div>
                <div class="step-actions">
-                  <button class="waves-effect waves-dark btn next-step">CONTINUE</button>
+                  <button class="waves-effect waves-dark btn next-step brown lighten-1">CONTINUE</button>
                   <button class="waves-effect waves-dark btn-flat previous-step">BACK</button>
                </div>
             </div>
@@ -141,7 +141,7 @@ function checkUsername(){
                </div>
 
                <div class="step-actions">
-                  <button class="waves-effect waves-dark btn" type="submit">Register</button>
+                  <button class="waves-effect waves-dark btn brown lighten-1" type="submit">Register</button>
                </div>
             </div>
          </li>
