--- a/views/tools/users/single/index.handlebars
+++ b/views/tools/users/single/index.handlebars
@@ -68,7 +68,7 @@
         <br>
         <div class="row">
           <div class="form-group col-xs-6 text-right">
-              <button type="submit" class="btn btn-default">Done</button>
+              <button type="submit" class="btn btn-default brown lighten-1">Done</button>
           </div>
       </form>
       {{/if}}
