--- a/views/posts/edit/index.handlebars
+++ b/views/posts/edit/index.handlebars
@@ -46,13 +46,13 @@
         <br>
         <div class="row">
           <div class="form-group col-xs-6 text-right">
-              <button type="submit" class="btn btn-default">Update</button>
+              <button type="submit" class="btn btn-default brown lighten-1">Update</button>
           </div>
           <br>
       </form>
       <form name="delete-post" method="POST" action="/posts/{{post.user.username}}/{{post.slug}}?_method=DELETE">
           <div class="form-group col-xs-6 text-left">
-            <button type="submit" class="btn btn-default">Delete</button>
+            <button type="submit" class="btn btn-default red">Delete</button>
           </div>
         </div>
       </form>
