--- a/views/posts/new-bid/index.handlebars
+++ b/views/posts/new-bid/index.handlebars
@@ -46,12 +46,12 @@
         <br>        <br>        <br>
         <div class="row">
           <div class="form-group  col s3 offset-s3">
-              <button type="submit" class="btn btn-default">Submit bid</button>
+              <button type="submit" class="btn btn-default brown lighten-1">Submit bid</button>
           </div>
 
         <div class="col s3 offset-s1">
           <div class="create-post">
-            <a class="btn btn-default" href="/deposit/add">Deposit more money </a>
+            <a class="btn btn-default brown lighten-1" href="/deposit/add">Deposit more money </a>
           </div>
         </div>
 
