--- a/views/posts/new-post/index.handlebars
+++ b/views/posts/new-post/index.handlebars
@@ -52,7 +52,7 @@
         <br>
         <div class="row">
           <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-default">Create</button>
+              <button type="submit" class="btn btn-default brown lighten-1">Create</button>
           </div>
         </div>
       </form>
