--- a/views/posts/review/create-review/index.handlebars
+++ b/views/posts/review/create-review/index.handlebars
@@ -1,3 +1,4 @@
+
 <header class="intro-header">
   <div class="container">
     <div class="row">
@@ -78,7 +79,7 @@
             <br>
             <div class="row">
               <div class="form-group col-xs-12">
-                  <button type="submit" class="btn btn-default">Submit</button>
+                  <button type="submit" class="btn btn-default brown lighten-1">Submit</button>
               </div>
             </div>
           </form>
@@ -137,7 +138,7 @@
             <br>
             <div class="row">
               <div class="form-group col-xs-12">
-                  <button type="submit" class="btn btn-default">Submit</button>
+                  <button type="submit" class="btn btn-default brown lighten-1">Submit</button>
               </div>
             </div>
           </form>
