--- a/views/posts/review/winner/index.handlebars
+++ b/views/posts/review/winner/index.handlebars
@@ -31,7 +31,7 @@
           <br>
           <div class="row">
             <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-default">Confirm</button>
+                <button type="submit" class="btn btn-default brown lighten-1">Confirm</button>
             </div>
           </div>
         </form>
@@ -54,7 +54,7 @@
           <br>
           <div class="row">
             <div class="form-group col-xs-12">
-                <button type="submit" class="btn btn-default">Confirm</button>
+                <button type="submit" class="btn btn-default brown lighten-1">Confirm</button>
             </div>
           </div>
         </form>
