--- a/views/posts/index.handlebars
+++ b/views/posts/index.handlebars
@@ -159,7 +159,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="site-heading">
-          <h4>Browse Complete/Closed Projects</h4>
+          <h4>Browse All Projects and Projects</h4>
           <hr class="small">
         </div>
       </div>
